# university

./: .gitignore  CMakeLists.txt  fsm-reg.hs  photoCaptioning.ipynb
asm/: .gitignore  Makefile  applesilicon.asm
asm/assignment3/: Makefile  assignment3.asm  assignment3.lst  run.sh
asm/nov-13/: Makefile  bit.asm  bit.lst  run.sh
asm/nov-8/: bit.asm  bit.lst
asm/oct-18/: Makefile  procedures.asm  procedures.lst  run.sh
asm/oct-23/: Makefile  procedures2.asm  procedures2.lst  run.sh
asm/oct-30/: bit.asm  bit.lst
assignment1/: CMakeLists.txt  assignment1.cabal
assignment1/src/: Fsm_Reg.hs  Main.hs  main.cpp
assignment2/: CMakeLists.txt
assignment2/src/: main.cpp
assignment3/: B.txt  CMakeLists.txt  assignment3.cabal
assignment3/src/: FLang.hs  hw3.hs  main.cpp
assignment4/: CMakeLists.txt  cars.txt
assignment4/src/: assign4.cpp  main.cpp
assignment5/: CMakeLists.txt
assignment5/src/: main.cpp
datastructures/: dlinkedlist.cpp  slinkedlist.cpp  stack.cpp
lab1/: Array.h  CMakeLists.txt  lab1.cpp
lab10/: CMakeLists.txt  Graph.cpp  Graph.h  Queue.h  lab10.cpp
lab11/: CMakeLists.txt  Fib.h  Matrix.cpp  Matrix.h  lab11.cpp
lab15/: CMakeLists.txt  DisjointSet.cpp  DisjointSet.h  Graph.cpp  Graph.h  Queue.cpp  Queue.h  lab15.cpp
lab2/: Array3D.h  CMakeLists.txt  asymptotic_problems.txt  lab2.cpp
lab3/: Array.h  CMakeLists.txt  lab3.cpp
lab4/: Array.h  CMakeLists.txt  data.csv  graphs.xlsx  interpretations.txt  lab4.cpp
lab5/: Array.h  CMakeLists.txt  data.csv  graphs.xlsx  interpretations.txt  lab5.cpp
lab6/: Array.h  CMakeLists.txt  List.h  Stack.h  lab6.cpp
lab9/: Bst.h  CMakeLists.txt  lab9.cpp
lab_1/: lab_1.cpp
lab_10/src/: main.cpp
lab_11/src/: main.cpp
lab_12/src/: lab_12.cpp
lab_2/: lab_2.cpp
lab_3/: lab_3.cpp
lab_4/: lab_4.cpp
lab_5/: lab_5.cpp
lab_7/: lab_7.cpp
lab_8/: lab_8.cpp
lab_9/: lab_9.cpp
lab_template/: CMakeLists.txt  ClassN.h  labN.cpp
lectures/: april10.md  march10.cpp  march15.cpp  march20.cpp  march22.cpp  march27.cpp  thu-14-sept.md  thu-21-sept.md  thu-28-sept.md  thu-31-aug.md  thu-aug-24.md  thurs-7-sept.md  tue-19-sept.md  tue-26-sept.md  tues-12-sept.md  tues-29-aug.md  tues-5-sept.md
notes/: 6-sept-2023.md  LV1A.md  LV1B.md  LV1C.md  LV1D.md  LV2A.md  LV2B.md  LV2C.md  LV2D.md  LV3A.md  LV3B.md  LV3C.md  LV3D.md  LV3E.md  LV3F.md  LV3G.md  LV4A.md  LV4B.md  LV4C.md  LV4D.md  LV4E.md  lecture-11-sept.md  lecture-18-sept.md  lecture-28-aug.md  lecture-30-aug.md  wed-13-sept.md  wed-20-sept.md
project/: CMakeLists.txt  Readme.md
project/maps/: map1.txt  map2.txt  map3.txt  map4.txt  map5.txt
project/src/: entity.cpp  entity.h  main.cpp  util.h  world.h
project/src/ds/: array.h  graph.cpp  graph.h  matrix.h  queue.cpp  queue.h
project_one/src/: project_one.cpp  records2.cpp
project_two/src/: project_two.cpp
scripts/: convert.cr  convert.exs  convert.re
test/: CMakeLists.txt  test.cpp
