cabal-version:      3.0
name:               assignment1
version:            0.1.0.0
-- synopsis:
-- description:
author:             dwclake
maintainer:         clake.dw@gmail.com
-- copyright:
category:           Language
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable assignment1
    import:           warnings
    main-is:          Main.hs
    other-modules:    Fsm_Reg
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010
